--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ color:black;
   padding-top:-20%;
 }
 h2 span {
-  margin-top:-300px;       
+  margin-top:-300px;
   padding-bottom: 300px;
   display: block;
 }
@@ -109,7 +109,9 @@ zakerytclarke@gmail.com
 </div>
 
 <div class="ca" style="left:45%;position:fixed;z-index:101;">
+<a href="#top">
 <img src="zak.jpg" style="width:100%;">
+</a>
 </div>
 
 
@@ -142,7 +144,7 @@ Projects
 Passions
 </h2>
 </a>
-<a href="#samples">
+<a href="#sample">
 <h2 class="menu">
 Samples
 </h2>
@@ -150,9 +152,12 @@ Samples
 </div>
 
 </div>
+<span id="top"> &nbsp; </span>
+
 <div class="divider"  style="margin-top:200px;text-align:center;">
 
-    <a href="resume.pdf">
+
+    <a href="resume.pdf" target="_blank">
     <div class="circle">
     <img src="resume.png"  style="background-color:white;">
     <h3 style="text-align:center;">
@@ -160,7 +165,7 @@ Samples
     </h3>
     </div>
     </a>
-  <a href="https://github.com/zakerytclarke">
+  <a href="https://github.com/zakerytclarke" target="_blank">
   <div class="circle">
   <img src="github.gif">
   <h3 style="text-align:center;">
@@ -169,7 +174,7 @@ Portfolio
   </div>
   </a>
 
-  <a href="https://codepen.io/zakerytclarke/">
+  <a href="https://codepen.io/zakerytclarke/" target="_blank">
   <div class="circle">
   <img src="codepen.png">
   <h3 style="text-align:center;">
@@ -186,7 +191,7 @@ Portfolio
   About
   </h2>
 <p>
-Hi there! My name is Zakery Clarke and I am a self-taught programmer who has a variety of skills from website design to microproccesors. My specialization is in website design
+Hi there! My name is Zakery Clarke and I am a self-taught programmer who has a variety of skills from website design to microproccesors. My specialization is in website design and I am interested in applied machine learning to solve a plethora of problems. I have here a repository of my projects and passions, I hope you enjoy!
 </p>
 </div>
 <div class="divider">
@@ -201,7 +206,7 @@ Hi there! My name is Zakery Clarke and I am a self-taught programmer who has a v
 Expertise
 </u>
 </h2>
-<div class="circle" style="width:100%;">
+<div style="width:100%;">
 <img src="js.png">
 </div>
 <div style="width:100%;">
@@ -276,18 +281,18 @@ Python
   </h2>
 
 <div class="circle">
-<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<img src="website.png">
 <h3 style="text-align:center;">
 &lt;Clarke&gt;&lt;/Computing&gt;
 </h3>
 <p class="descriptor">
-A lightweight JS framework for component developement<br>
+Freelance Website Developement<br>
 <b>2016-Present</b>
 </p>
 </div>
 
 <div class="circle">
-<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<img src="etrans.png">
 <h3 style="text-align:center;">
 E-TransControl
 </h3>
@@ -298,7 +303,7 @@ Embeded Systems Programmer and Website Design<br>
 </div>
 
 <div class="circle">
-<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<img src="nmapt.png">
 <h3 style="text-align:center;">
 NM Apartment Advisors
 </h3>
@@ -404,7 +409,7 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
   Website Portfolio
   </h2>
 
-<a href="https://clarkecomputing.github.io">
+<a href="#cc">
 <div class="circle">
 <img src="cclogobg.jpg">
 <h3 style="text-align:center;">
@@ -417,7 +422,7 @@ Business Website<br>
 </div>
 </a>
 
- <a href="https://emmaxbuck.github.io">
+ <a href="#emmaxbuck">
 <div class="circle">
 <img src="emma.png">
 <h3 style="text-align:center;">
@@ -430,7 +435,7 @@ Photography Website for EmmaxBuck Photography <br>
 </div>
 </a>
 
-<a href="http://www.e-transcontrol.com">
+<a href="#etrans">
 <div class="circle">
 <img src="e-transcontrol.png">
 <h3 style="text-align:center;">
@@ -485,7 +490,7 @@ Backpacking
 </h3>
 </div>
 <div class="circle">
-<img src="bp.jpg">
+<img src="earth.jpg">
 <h3 style="text-align:center;">
 Sustainable Living
 </h3>
@@ -532,12 +537,21 @@ Photography
 <h2>
 Sample Websites
 </h2>
+<h2>
+<span id="cc"> &nbsp; </span>
+</h2>
 <a href="https://clarkecomputing.github.io">
-<img id="cc" src="cc.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<img src="cc.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
 <br>
+<h2>
+<span id="emmaxbuck"> &nbsp; </span>
+</h2>
 <a href="https://emmaxbuck.github.io">
-<img id="eb" src="eb.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<img src="eb.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
 </a>
+<h2>
+<span id="etrans"> &nbsp; </span>
+</h2>
 <a href="https://etranscontrol.com">
 <img id="et" src="et.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
 </a>
