--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 
 <a href="#cc">
 <div class="circle">
-<img src="cclogobg.jpg">
+<img src="website.png">
 <h3 style="text-align:center;">
 Clarke Computing
 </h3>
@@ -541,19 +541,19 @@ Sample Websites
 <span id="cc"> &nbsp; </span>
 </h2>
 <a href="https://clarkecomputing.github.io">
-<img src="cc.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<img src="cc.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
 <br>
 <h2>
 <span id="emmaxbuck"> &nbsp; </span>
 </h2>
 <a href="https://emmaxbuck.github.io">
-<img src="eb.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<img src="eb.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
 </a>
 <h2>
 <span id="etrans"> &nbsp; </span>
 </h2>
 <a href="https://etranscontrol.com">
-<img id="et" src="et.jpg" style="width:100%;border-radius:0%;padding-bottom:20px;">
+<img id="et" src="et.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
 </a>
 </div>
 
