--- a/index.html
+++ b/index.html
@@ -531,6 +531,14 @@ Photography
 <p data-height="265" data-theme-id="dark" data-slug-hash="gGMjyN" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Particles" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/gGMjyN/">Particles</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 </div>
+ <div style="width:48%;display:inline-block;"> 
+<p data-height="265" data-theme-id="dark" data-slug-hash="ZagREK" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="X-Mas Tree ∞" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/ZagREK/">X-Mas Tree ∞</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>  
+  </div>
+  <div style="width:48%;display:inline-block;">
+<p data-height="265" data-theme-id="dark" data-slug-hash="QOENdw" data-default-tab="result" data-user="zakerytclarke" data-embed-version="2" data-pen-title="Liquid Button" class="codepen">See the Pen <a href="https://codepen.io/zakerytclarke/pen/QOENdw/">Liquid Button</a> by Zakery Clarke (<a href="https://codepen.io/zakerytclarke">@zakerytclarke</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+  </div>
 
 </div>
 <div class="divider">
