--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 
 <a href="#cc">
 <div class="circle">
-<img src="cclogobg.jpg">
+<img src="cclogobg.JPG">
 <h3 style="text-align:center;">
 Clarke Computing
 </h3>
