--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Administrative Assistant that managed a variety of office tasks<br>
 
 <a href="https://zakerytclarke.github.io/dingo.js">
 <div class="circle">
-<img src="https://github.com/dingojs/dingojs.github.io">
+<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
 <h3 style="text-align:center;">
 Dingo.js
 </h3>
