--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Passions
 </a>
 <a href="#sample">
 <h2 class="menu">
-Samples
+Portfolio
 </h2>
 </a>
 </div>
@@ -326,7 +326,7 @@ Administrative Assistant that managed a variety of office tasks<br>
 
 <a href="https://zakerytclarke.github.io/dingo.js">
 <div class="circle">
-<img src="https://zakerytclarke.github.io/dingo.js/dingo.jpg">
+<img src="https://dingojs.github.io/dingo.jpg">
 <h3 style="text-align:center;">
 Dingo.js
 </h3>
@@ -406,52 +406,6 @@ A functional calculator with advanced graphing, unit conversions, and more<br>
 
   <div class="divider">
   <h2>
-  Website Portfolio
-  </h2>
-
-<a href="#cc">
-<div class="circle">
-<img src="cclogobg.JPG">
-<h3 style="text-align:center;">
-Clarke Computing
-</h3>
-<p class="descriptor">
-Business Website<br>
-<b>Lead Developer</b>
-</p>
-</div>
-</a>
-
- <a href="#emmaxbuck">
-<div class="circle">
-<img src="emma.png">
-<h3 style="text-align:center;">
-Emmaxbuck
-</h3>
-<p class="descriptor">
-Photography Website for EmmaxBuck Photography <br>
-<b>Lead Developer</b>
-</p>
-</div>
-</a>
-
-<a href="#etrans">
-<div class="circle">
-<img src="e-transcontrol.png">
-<h3 style="text-align:center;">
-E-TransControl
-</h3>
-<p class="descriptor">
-After-Market Car Upgrades Website for E-TransControl<br>
-<b>Lead Developer</b>
-</p>
-</div>
-</a>
-
-</div>
-
-  <div class="divider">
-  <h2>
   Competitions
   </h2>
   <a href="https://github.com/zakerytclarke/unmappcontest2017">
@@ -508,6 +462,19 @@ Photography
 </div>
 
 
+<div class="divider">
+<h2>
+Portfolio
+</h2>
+
+<img src="dingo.JPG" style="width:80%;margin-left:5%;margin-top:30px;">
+<img src="chatbot.png" style="width:80%;margin-left:5%;margin-top:30px;">
+<img src="nmbp.png" style="width:80%;margin-left:5%;margin-top:30px;">
+<img src="santa.png" style="width:80%;margin-left:5%;margin-top:30px;">
+<img src="emma.png" style="width:80%;margin-left:5%;margin-top:30px;">
+<img src="etrans.png" style="width:80%;margin-left:5%;margin-top:30px;">
+
+</div>
 
 <div class="divider">
   <h2>
@@ -540,29 +507,6 @@ Photography
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
   </div>
 
-</div>
-<div class="divider">
-<h2>
-Sample Websites
-</h2>
-<h2>
-<span id="cc"> &nbsp; </span>
-</h2>
-<a href="https://clarkecomputing.github.io">
-<img src="cc.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
-<br>
-<h2>
-<span id="emmaxbuck"> &nbsp; </span>
-</h2>
-<a href="https://emmaxbuck.github.io">
-<img src="eb.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
-</a>
-<h2>
-<span id="etrans"> &nbsp; </span>
-</h2>
-<a href="https://etranscontrol.com">
-<img id="et" src="et.JPG" style="width:100%;border-radius:0%;padding-bottom:20px;">
-</a>
 </div>
 
 
