--- a/index.html
+++ b/index.html
@@ -467,12 +467,12 @@ Photography
 Portfolio
 </h2>
 
-<img src="dingo.JPG" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
-<img src="chatbot.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
-<img src="nmbp.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
-<img src="santa.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
-<img src="emma.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
-<img src="etrans.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;">
+<img src="dingo.JPG" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="chatbot.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="nmbp.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="santa.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="emma.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="etrans.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
 
 </div>
 
