--- a/index.html
+++ b/index.html
@@ -467,14 +467,14 @@ Photography
    <span id="sample"> &nbsp; </span>
 Portfolio
 </h2>
-
-<img src="dingo.JPG" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="chatbot.png" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="nmbp.png" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="santa.png" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="emma.png" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="etrans.png" style="width:98%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-
+<div style="width:100%;text-align:center;"> 
+<img src="dingo.JPG" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="chatbot.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="nmbp.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="santa.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="emma.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="etrans.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+  </div>
 </div>
 
 <div class="divider">
