--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta name="theme-color" content="white" />
+<meta name="theme-color" content="white"/>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <title>
@@ -473,7 +473,7 @@ Portfolio
 <img src="nmbp.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
 <img src="santa.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
 <img src="emma.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
-<img src="etrans.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
+<img src="e-transbg.png" style="width:45%;margin-left:5%;margin-top:30px;border-radius:0px;display:inline-block;">
   </div>
 </div>
 
