Removed Mobile padding

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="./assets/icons/zak.png" style="width:10vw;border-radius:50%;">
     </div>
 
-    <div class="desktop" style="flex:1;text-align:right;margin-right:5vw;margin-top:20px;vertical-align:middle;">
+    <div style="flex:1;text-align:right;margin-right:5vw;margin-top:20px;vertical-align:middle;">
       <span style="width:100%;display:block;">
         <a href="mailto:zakerytclarke@gmail.com" style="color:#ccc;border-bottom: none;">
           zakerytclarke@gmail.com
