Mobile font responsiveness

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       Zakery Clarke
     </a>
     </h1>
-    <div id="headerImg" style="flex:1;text-align:center;vertical-align:middle;">
-      <img src="./assets/icons/zak.png" style="width:10vw;border-radius:50%;">
+    <div id="headerImg">
+      <img src="./assets/icons/zak.png">
     </div>
 
     <div style="flex:1;text-align:right;margin-right:5vw;margin-top:20px;vertical-align:middle;">
