--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
       Zakery Clarke
     </a>
     </h1>
-    <div id="headerImg" style="flex:1;text-align:center;vertical-align:middle;">
-      <img src="./assets/icons/zak.png" style="width:10vw;border-radius:50%;">
+    <div id="headerImg">
+      <img src="./assets/icons/zak.png">
     </div>
 
     <div style="flex:1;text-align:right;margin-right:5vw;margin-top:20px;vertical-align:middle;">
@@ -57,7 +57,7 @@
           title:"Software Developer",
           company:"E-TransControl",
           year:"2016-2019",
-          description:"Web Development\n Embedded Processor Development\n",
+          description:"Web Development<br> Embedded Processor Development\n",
           tech:["c","html5","css3","js","wordpress"]
         }
       ],
