Fixed zoom for mobile image rendering

--- a/portfolio.html
+++ b/portfolio.html
@@ -361,7 +361,7 @@ function renderItem(json){
 
     if(json.mobileImg){
       out+="<div class='mobileImage'>";
-      out+='<span onclick="showImg(`'+json.images[i]+'`)">';
+      out+='<span onclick="showImg(`'+json.mobileImg+'`)">';
       out+="<img src='"+json.mobileImg+"'/>";
       out+="</span>";
       out+="</div>"
