Image path change

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,8 @@
   year:"2017",
   tech:["js","html5","css3"],
   tags:["Syntax Highlighting","Github Integration","Media Integration"],
-  images:["./assets/portfolio/quark.png"]
+  images:["./assets/portfolio/quark.png"],
+  mobileImg:"./assets/portfolio/quarkmobile.png"
 },
   {
     title:"Chatbot.js",
