--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
   <div id="header" style="display:flex;">
     <h1 id="name" style="flex:1;vertical-align:middle;">
-      <a href="./index.html">
+      <a href="./index.html" style="color:#ccc;text-shadow:none;">
       Zakery Clarke
     </a>
     </h1>
@@ -17,16 +17,20 @@
       <img src="./assets/icons/zak.png">
     </div>
 
-    <div style="flex:1;text-align:right;margin-right:5vw;margin-top:20px;vertical-align:middle;">
+    <div id="contact">
       <span style="width:100%;display:block;">
+        <b>
         <a href="mailto:zakerytclarke@gmail.com" style="color:#ccc;border-bottom: none;">
           zakerytclarke@gmail.com
         </a>
+      </b>
       </span>
       <span style="width:100%;display:block;margin-right:30px;">
+        <b>
         <a href="tel:5052349665" style="color:#ccc;border-bottom: none;">
           1.505.234.9665
         </a>
+      </b>
       </span>
     </div>
   </div>
